hphp/hack/test/typecheck/function_pointer/function_type_hint_optional_args_disabled.php
<?hh

function expect((function(int,optional string):void) $f):void { }

type T = (function(bool,optional int):string);
